@@ -4,6 +4,7 @@ S3method(as.tags,htmlwidget)
 S3method(print,htmlwidget)
 S3method(print,suppress_viewer)
 export(JS)
+export(JSEvals)
 export(appendContent)
 export(createWidget)
 export(getDependency)
