@@ -5,6 +5,8 @@ htmlwidgets 1.5.1.9000
 
 * Added a `reportTheme` argument to `shinyWidgetOutput()`. If `TRUE`, CSS styles of the widget's output container are made available to `shiny::getCurrentOutputInfo()`, making it possible to provide 'smart' styling defaults in a `renderWidget()` context. (#361)
 
+* Export the `JSEvals` function, allowing other packages to support `JS()` in non-widget contexts.
+
 htmlwidgets 1.5.1
 -------------------------------------------------------
 
